[package]
name = "rust-questions"
version = "0.1.0"
edition = "2021"




[dependencies]
crossbeam = "0.8.4"
rayon = "1.11.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"]}
reqwest = { version = "0.12.23", features = ["json"] }
tokio-stream = "0.1.17"
sha2 = "0.10.9"
rand = "0.9.2"
async-trait = "0.1.89"
axum = "0.8.4"
serde = "1.0.225"
hyper = "1.7.0"
serde_json = "1.0.145"
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_yaml = "0.9"   # <-- optional = true
itertools = "0.14.0"
parking_lot = "0.12.4"
criterion = "0.7.0"
base64 = "0.22.1"
proptest = "1.7.0"
serde_cbor = "0.11.2"
walkdir = "2.5.0"
blake3 = "1.8.2"
smallvec = "1.15.1"
arrayvec = "0.7.6"
futures-util = "0.3.31"
tokio-util = "0.7.16"
crossbeam-deque = "0.8.6"
futures = "0.3.31"
clap = { version = "4.5.48", features = ["derive"] }
envy = "0.4.2"
config = "0.15.16"
jsonwebtoken = "9.3.1"
env_logger = "0.11.8"
actix-web = "4.11.0"
chrono = "0.4.42"
redis = "0.32.5"
subtle = "2.6.1"


